@@ -139,3 +139,4 @@ def _populate_decorated(callable, deprecation_version, label,
                         decorated_callable)
     decorated_callable.__module__ = callable.__module__
     decorated_callable.__name__ = callable.__name__
+    decorated_callable.is_deprecated = True
